--- a/metadata.yaml
+++ b/metadata.yaml
@@ -52,31 +52,40 @@ spec:
   interfaces:
     variables:
       - name: instance_name
-        description: The name of the Filestore instance. The name must be unique within the specified instance.
+        description: The name of the Filestore instance. Instance name must start with a lowercase letter, followed by up to 62 lowercase letters, numbers, or hyphens, and cannot end with a hyphen.
         varType: string
         required: true
       - name: location
-        description: The location for the Filestore instance. Can be a zone or a region, depends on the tier.
+        description: The GCP zone for zonal instances or region for regional instances.
         varType: string
         required: true
       - name: tier
-        description: The service tier of the instance. Examples include ZONAL, REGIONAL, BASIC_HDD, BASIC_SSD, ENTERPRISE.
+        description: The service tier of the instance. Possible values are BASIC_HDD, BASIC_SSD, ENTERPRISE, ZONAL, and REGIONAL.
         varType: string
         defaultValue: REGIONAL
       - name: capacity_gb
-        description: The capacity of the file share in gigabytes.
+        description: |
+          The desired capacity of the volume in GB. Acceptable instance capacities vary by tier:
+
+          - BASIC_HDD: 1TB - 63.9TB in 1GB increments.
+          - BASIC_SSD: 2.5TB - 63.9TB in 1GB increments.
+          - ZONAL: 1TB-9.75TB in 256GB increments, or 10TB-100TB in 2.5TB increments.
+          - ENTERPRISE: 1TB - 10TB in 256GB increments.
+          - REGIONAL: 1TB-9.75TB in 256GB increments, or 10TB-100TB in 2.5TB increments.
+
+          Learn more at: https://docs.cloud.google.com/filestore/docs/creating-instances#allocate_capacity
         varType: number
         defaultValue: 1024
       - name: share_name
-        description: The name of the file share.
+        description: The name of the file share. Must use 1-16 characters for the basic service tier and 1-63 characters for all other service tiers. Must use lowercase letters, numbers, or underscores [a-z0-9_]. Must start with a letter.
         varType: string
         defaultValue: vol1
       - name: network
-        description: The name of the network to which the Filestore instance is connected.
+        description: The name of the GCE VPC network to which the Filestore instance is connected.
         varType: string
         defaultValue: default
       - name: network_modes
-        description: The IP versions for the network. Examples include MODE_IPV4, MODE_IPV6.
+        description: "IP versions for which the instance has IP addresses assigned. Each value may be one of: ADDRESS_MODE_UNSPECIFIED, MODE_IPV4, MODE_IPV6."
         varType: list(string)
         defaultValue:
           - MODE_IPV4
@@ -96,14 +105,14 @@ spec:
             }))
         defaultValue: []
       - name: connect_mode
-        description: The network connect mode of the Filestore instance.
+        description: The network connect mode of the Filestore instance. Possible values are DIRECT_PEERING, PRIVATE_SERVICE_ACCESS, and PRIVATE_SERVICE_CONNECT.
         varType: string
         defaultValue: DIRECT_PEERING
       - name: kms_key_name
         description: The resource name of the KMS key to be used for data encryption.
         varType: string
       - name: protocol
-        description: The file protocol of the Filestore instance.
+        description: File sharing protocol. Possible values are NFS_V3 (NFSv3) and NFS_V4_1 (NFSv4.1). NFSv4.1 can be used with ZONAL, REGIONAL and ENTERPRISE. The default is NFSv3.
         varType: string
         defaultValue: NFS_V3
     outputs:
